--- a/infrastructure/jenkins/Dockerfile
+++ b/infrastructure/jenkins/Dockerfile
@@ -1,7 +1,9 @@
-FROM jenkins/jenkins:2.263.2
+FROM jenkins/jenkins:2.357
 
 # Install required plugins
-RUN /usr/local/bin/install-plugins.sh git:4.5.2 blueocean:1.24.3 job-dsl:1.77
+RUN jenkins-plugin-cli --plugins git:4.11.3
+RUN jenkins-plugin-cli --plugins blueocean:1.25.5
+RUN jenkins-plugin-cli --plugins --plugins job-dsl:1.79
 
 # Skip initial setup
 ENV JAVA_OPTS -Djenkins.install.runSetupWizard=false
