--- a/messaging-app/pom.xml
+++ b/messaging-app/pom.xml
@@ -31,6 +31,7 @@
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
+      <version>1.18.24</version>
     </dependency>
 
     <dependency>
